# expense-tracker-mcp-server

./: .env  README.md  categories.json  expenses.db  main.py  pyproject.toml  server.py
