[project]
name = "expense-tracker-mcp-server-remote"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.2",
    "fastmcp>=3.4.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
